--- a/WCSTrainer/Pages/Shared/_ListDisplay.cshtml
+++ b/WCSTrainer/Pages/Shared/_ListDisplay.cshtml
@@ -11,7 +11,7 @@
          <li id="@item.Description @item.Id" class="active searchable">
             <div class="info">
                <div class="title">
-                  <a class="name unarchived" asp-page="./Details" asp-route-id="@item.Id">#@item.Id - @item.Description</a>
+                  <a class="name unarchived" asp-page="./Details" asp-route-id="@item.Id">@item.Description</a>
                </div>
             </div>
          </li>
