--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -11,7 +11,7 @@
       <div class="properties">
          <div class="user-form">
             <div id="contentToPrint" class="print-block">
-               <p class="title">Skill #@Model.Skill.Id</p>
+               <p class="title">@Model.Skill.Name</p>
                <div class="field-container">
                   <div class="field-section-container">
                      <div class="field-section">
