--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -13,15 +13,13 @@
             <div class="order-list2">
                <table id="dataTable">
                   <tr>
-                     <th>Employee ID</th>
                      <th>First Name</th>
                      <th>Last Name</th>
                      <th>Status</th>
                      <th></th>
                   </tr>
-                  @foreach (var item in Model.Employees) {
+                  @foreach (var item in Model.Employees.OrderBy(i => i.FirstName)) {
                      <tr class="clickable">
-                        <td>@Html.DisplayFor(modelItem => item.Id)</td>
                         <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
                         <td>@Html.DisplayFor(modelItem => item.LastName)</td>
                         <td>@Html.DisplayFor(modelItem => item.Status)</td>
