--- a/WCSTrainer/Pages/Locations/Index.cshtml
+++ b/WCSTrainer/Pages/Locations/Index.cshtml
@@ -44,7 +44,7 @@
                      <ul class="skill-list">
                         @foreach (var lesson in category.Locations) {
                            <li id="@lesson.Name @lesson.Id" class="skill searchable2">
-                              <a asp-page="./Details" asp-route-id="@lesson.Id">#@lesson.Id - @lesson.Name</a>
+                              <a asp-page="./Details" asp-route-id="@lesson.Id">- @lesson.Name</a>
                            </li>
                         }
                      </ul>
