--- a/WCSTrainer/Pages/TrainerGroups/Details.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Details.cshtml
@@ -11,7 +11,7 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Trainer Group #@Model.TrainerGroup.Id</p>
+            <p class="title">@Model.TrainerGroup.Name</p>
             <div class="field-container">
                <div class="field-section-container">
                   <div class="field-section">
@@ -20,6 +20,10 @@
                      </div>
                      <table>
                         <tbody>
+                              <tr>
+                                 <td class="label">Group ID</td>
+                                 <td class="text">@Model.TrainerGroup.Id</td>
+                              </tr>
                            <tr>
                               <td class="label">Name</td>
                               <td class="text">@Model.TrainerGroup.Name</td>
