--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -1751,7 +1751,7 @@ nav {
          width: 300px;
       }
 
-      .identity-container .content a, button {
+      .identity-container button {
          color: lightblue;
       }
 
