--- a/WCSTrainer/Pages/FileExplorer/Index.cshtml
+++ b/WCSTrainer/Pages/FileExplorer/Index.cshtml
@@ -1,68 +1,6 @@
 ﻿@page
 @model WCSTrainer.Pages.FileExplorer.IndexModel
 
-@using System.Text.RegularExpressions
-@using System.IO
-
-@functions {
-   public class FileSystemNode
-   {
-      public string Name { get; set; }
-      public bool IsFile { get; set; }
-      public Dictionary<string, FileSystemNode> Children { get; set; }
-      public string Path { get; set; }
-
-      public FileSystemNode(string name, bool isFile, string path)
-      {
-         Name = name;
-         IsFile = isFile;
-         Path = path;
-         Children = new Dictionary<string, FileSystemNode>();
-      }
-   }
-
-   public FileSystemNode BuildFileTree()
-   {
-      var root = new FileSystemNode("Shared", false, "/Shared");
-      var sharedFolderPath = System.IO.Path.Combine(Directory.GetCurrentDirectory(), "wwwroot", "Shared");
-
-      if (Directory.Exists(sharedFolderPath))
-      {
-         var files = Directory.GetFiles(sharedFolderPath, "*.*", SearchOption.AllDirectories);
-         foreach (var file in files)
-         {
-            var webPath = ConvertToWebPath(file, System.IO.Path.Combine(Directory.GetCurrentDirectory(), "wwwroot"), "");
-            AddToTree(root, webPath.Split('/').Skip(2).ToArray(), webPath);
-         }
-      }
-      return root;
-   }
-
-   private void AddToTree(FileSystemNode node, string[] pathParts, string fullPath)
-   {
-      if (pathParts.Length == 0) return;
-
-      var currentPart = pathParts[0];
-      var isFile = pathParts.Length == 1;
-      var currentPath = $"{node.Path}/{currentPart}";
-
-      if (!node.Children.ContainsKey(currentPart))
-      {
-         node.Children[currentPart] = new FileSystemNode(currentPart, isFile, currentPath);
-      }
-
-      if (!isFile)
-      {
-         AddToTree(node.Children[currentPart], pathParts.Skip(1).ToArray(), fullPath);
-      }
-   }
-
-   private string ConvertToWebPath(string filePath, string rootPath, string webPrefix)
-   {
-      return filePath.Replace("\\", "/").Replace(rootPath.Replace("\\", "/"), webPrefix);
-   }
-}
-
 <link rel="stylesheet" href="~/css/explorer.css" asp-append-version="true" />
 
 <div class="panel">
@@ -72,55 +10,60 @@
          <div class="file-explorer">
             <div>
                <ul id="path" class="file-explorer-path">
-                  <li>Shared</li>
+                  @{
+                     var segments = Model.CurrentPath.Trim('/').Split('/');
+                     var accumulatedPath = "/";
+                     for (var i = 0; i < segments.Length; i++)
+                     {
+                        accumulatedPath += segments[i];
+                        <li class="path-selector">
+                           <form method="get">
+                              <input type="hidden" name="path" value="@accumulatedPath" />
+                              <button type="submit" class="path-segment">@segments[i]</button>
+                           </form>
+                        </li>
+                        if (i < segments.Length - 1)
+                        {
+                           <li class="path-separator">-></li>
+                        }
+                        accumulatedPath += "/";
+                     }
+                  }
                </ul>
             </div>
             <div id="fileList" class="file-list">
-               @{
-                  void RenderNode(FileSystemNode node, int depth)
+               @foreach (var node in Model.DisplayNodes)
+               {
+                  if (node.IsFile)
                   {
-                     var indent = new string(' ', depth * 4);
-                     if (node.IsFile)
-                     {
-                        <div class="file" data-path="@node.Path">
-                           <div>
-                              <i class="fas fa-file"></i>
-                              @node.Name
-                           </div>
+                     <div class="file" data-path="@node.Path">
+                        <div>
+                           <i class="fas fa-file"></i>
+                           @node.Name
+                        </div>
+                        <div class="path-container">
+                           <i class="fas fa-copy" onclick="copyToClipboard('@node.Path')"></i>
+                           <div class="filePath">@node.Path</div>
+                        </div>
+                     </div>
+                  }
+                  else
+                  {
+                     <div class="folder" data-path="@node.Path">
+                        <div class="folder-header">
+                           <form method="get">
+                              <input type="hidden" name="path" value="@node.Path" />
+                              <button type="submit" class="folder-name">
+                                 <i class="fas fa-folder"></i> @node.Name
+                              </button>
+                           </form>
                            <div class="path-container">
                               <i class="fas fa-copy" onclick="copyToClipboard('@node.Path')"></i>
                               <div class="filePath">@node.Path</div>
                            </div>
-                           
                         </div>
-                     }
-                     else
-                     {
-                        <div class="folder" data-path="@node.Path">
-                           <div class="folder-header">
-                              <div onclick="setPath('@node.Path')">
-                                 <i class="fas fa-folder"></i>
-                                 <span class="folder-name">@node.Name</span>
-                              </div>
-                              <div class="path-container">
-                                 <i class="fas fa-copy" onclick="copyToClipboard('@node.Path')"></i>
-                                 <div class="filePath">@node.Path</div>
-                              </div>
-                           </div>
-                           <div id="@node.Path" class="folder-content">
-                              @foreach (var child in node.Children.Values.OrderBy(n => !n.IsFile).ThenBy(n => n.Name))
-                              {
-                                 RenderNode(child, depth + 1);
-                              }
-                           </div>
-                        </div>
-                     }
-                  }
-
-                  var fileTree = BuildFileTree();
-                  foreach (var child in fileTree.Children.Values.OrderBy(n => !n.IsFile).ThenBy(n => n.Name))
-                  {
-                     RenderNode(child, 0);
+                        
+                     </div>
                   }
                }
             </div>
@@ -130,4 +73,12 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
-<script src="~/js/explorer.js" />
+<script>
+   function copyToClipboard(text) {
+       navigator.clipboard.writeText(text).then(() => {
+           alert('Path copied to clipboard!');
+       }).catch(err => {
+           console.error('Could not copy text: ', err);
+       });
+   }
+</script>
