--- a/WCSTrainer/Pages/Lessons/Create.cshtml
+++ b/WCSTrainer/Pages/Lessons/Create.cshtml
@@ -50,6 +50,7 @@
                   <p>S:/ (Story Path) </p>
                   <p>D:/ (Document Path)</p>
                   <p>I:/ (Image Path)</p>
+                  <p>Example: D:/Documents/Unit_Two/Lesson_One.pdf</p>
 
                   <div class="form-group">
                      <div class="btn-container">
