--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -1,59 +1,78 @@
 ﻿@page
 @model WCSTrainer.Pages.TrainingOrders.ConcludeModel
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
 
 <div class="panel">
    <div class="body">
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Conclude Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
-            <div class="field-container">
-               @if (Model.TrainingOrder.Status == "Active") {
-                  <form method="post">
-                     <div asp-validation-summary="All" class="text-danger"></div>
-                     <input hidden asp-for="TrainingOrder.Id" />
+            @if (SignInManager.IsSignedIn(User)) {
+               var user = await UserManager.GetUserAsync(User);
+               if (user != null) {
+                  <p class="title">Conclude Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
+                  <div class="field-container">
+                     @if (Model.TrainingOrder.Status == "Active")
+                     {
+                        <form method="post">
+                           <div asp-validation-summary="All" class="text-danger"></div>
+                           <input hidden asp-for="TrainingOrder.Id" />
 
-                     <input asp-for="TrainingOrder.BeginDate" hidden />
-                     @{
-                        var date = DateOnly.FromDateTime(DateTime.Now);
-                        <input asp-for="TrainingOrder.CompletionDate" hidden value="@date" />
-                     }
-                     <input asp-for="TrainingOrder.ApprovalDate" hidden />
-                     <input asp-for="TrainingOrder.ScheduleDate" hidden />
-                     <input asp-for="TrainingOrder.CreateDate" hidden />
+                           <input asp-for="TrainingOrder.BeginDate" hidden />
+                           @{
+                              var date = DateOnly.FromDateTime(DateTime.Now);
+                              <input asp-for="TrainingOrder.CompletionDate" hidden value="@date" />
+                           }
+                           <input asp-for="TrainingOrder.ApprovalDate" hidden />
+                           <input asp-for="TrainingOrder.ScheduleDate" hidden />
+                           <input asp-for="TrainingOrder.CreateDate" hidden />
 
-                     <input asp-for="TrainingOrder.Status" type="hidden" value="Completed" />
-                     <input asp-for="TrainingOrder.Priority" hidden />
+                           <input asp-for="TrainingOrder.Status" type="hidden" value="Completed" />
+                           <input asp-for="TrainingOrder.Priority" hidden />
 
-                     <input asp-for="TrainingOrder.ParentSkillId" hidden />
-                     <input asp-for="TrainingOrder.LessonId" type="hidden" />
-                     <input asp-for="TrainingOrder.TraineeId" hidden />
-                     <input asp-for="TrainingOrder.LocationId" hidden />
-                     <input asp-for="TrainingOrder.CreatedByUserId" hidden />
+                           <input asp-for="TrainingOrder.ParentSkillId" hidden />
+                           <input asp-for="TrainingOrder.LessonId" type="hidden" />
+                           <input asp-for="TrainingOrder.TraineeId" hidden />
+                           <input asp-for="TrainingOrder.LocationId" hidden />
+                           <input asp-for="TrainingOrder.CreatedByUserId" hidden />
 
-                     <component type="typeof(TrainingDetails)"
-                                render-mode="WebAssemblyPrerendered"
-                                param-OrderId="@Model.TrainingOrder.Id" />
+                           <input asp-for="TrainingOrder.ClosedByUserId" type="hidden" value="@user.Id" />
 
-                     <br />
-                     <div class="form-group">
-                        <div class="form">
-                           <div class="labels">
-                              <p class="control-label">Closing Notes</p>
+                           <component type="typeof(TrainingDetails)"
+                                      render-mode="WebAssemblyPrerendered"
+                                      param-OrderId="@Model.TrainingOrder.Id" />
+
+                           <br />
+                           <div class="form-group">
+                              <div class="form">
+                                 <div class="labels">
+                                    <p class="control-label">Closing Notes</p>
+                                 </div>
+                                 <textarea asp-for="TrainingOrder.ClosingNotes" rows="5"></textarea>
+                              </div>
                            </div>
-                           <textarea asp-for="TrainingOrder.ClosingNotes" rows="5"></textarea>
-                        </div>
-                     </div>
-                     <div class="form-group">
-                        <div class="btn-container">
-                           <input type="submit" value="Submit" class="btn bg-btn btnGreen" />
-                        </div>
-                     </div>
-                  </form>
-               } else {
-                  <p>No.</p>
+                           <div class="form-group">
+                              <div class="form">
+                                 <div class="labels">
+                                    <p class="control-label">Signature</p>
+                                 </div>
+                                 <input asp-for="TrainingOrder.ClosingSignature" class="form-control" />
+                              </div>
+                           </div>
+                           <div class="form-group">
+                              <div class="btn-container">
+                                 <input type="submit" value="Submit" class="btn bg-btn btnGreen" />
+                              </div>
+                           </div>
+                        </form>
+                     } else {
+                        <p>No.</p>
+                     }
+                  </div>
                }
-            </div>
+            }
          </div>
       </div>
    </div>
