--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -60,8 +60,7 @@
                               <p class="control-label">Location</p>
                               <span asp-validation-for="TrainingOrder.LocationId" class="text-danger"></span>
                            </div>
-                           <select asp-for="TrainingOrder.LocationId" class="form-control" asp-items="@Model.Locations">
-                           </select>
+                           <select asp-for="TrainingOrder.LocationId" class="form-control" asp-items="@Model.Locations"></select>
                         </div>
                      </div>
                      <div class="form-group">
