--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -1,7 +1,7 @@
 ﻿:root {
    --white: #ffffff;
    --black: #000000;
-   --gray1: #141516;
+   --gray1: #0f1011;
    --gray2: #1b2022;
    --gray3: #252a2e;
    --gray4: #45494e;
