--- a/WCSTrainer/Pages/Lessons/Edit.cshtml
+++ b/WCSTrainer/Pages/Lessons/Edit.cshtml
@@ -19,6 +19,15 @@
                         </div>
                         <input asp-for="Lesson.Name" class="form-control" />
                      </div>
+                  </div>
+                  <div class="form-group">
+                     <div class="form">
+                        <div class="labels">
+                           <p class="control-label">Lesson Duration</p>
+                           <span asp-validation-for="Lesson.Duration" class="text-danger"></span>
+                        </div>
+                        <input type="number" asp-for="Lesson.Duration" class="form-control" />
+                     </div>
                      <div class="form">
                         <div class="labels">
                            <p class="control-label">Lesson Category</p>
